<resources>
    <string name="app_name">MyExercisesCounter</string>
    <string name="todo">TODO</string>
    <string name="textview">0</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonDone">Done</string>
    <string name="push_ups">Push-ups</string>
    <string name="pull_ups">Pull-ups</string>
    <string name="nol">0</string>
    <string name="select_exercise">select exercise</string>
    <string name="zero">0</string>
    <string name="ready">Сделано</string>
    <string name="from">из</string>
    <string name="oneHundred">100</string>
    <string name="start">START</string>
    <string name="about">О программе</string>
    <string name="about_text">Программа марафона\n
        50/100/200/400</string>
    <string name="reset">RESET</string>

</resources>
