<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ExerciseActivity">

    <TextView
        android:id="@+id/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:background="@drawable/ic_shop__2_"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="fill"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ready"
            android:textColor="#7CB342"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/readyExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nol"
            android:textColor="#7CB342"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/from"
            android:textColor="#7CB342"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/onehundred"
            android:textColor="#7CB342"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:onClick="onClickButtonPlus"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCount" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:onClick="onClickButtonMinus"
        android:text="@string/buttonMinus"
        android:textColor="#795548"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCount"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:text="@string/textview"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickDone"
        android:text="@string/buttonDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />

</androidx.constraintlayout.widget.ConstraintLayout>